syntax = "proto3";
package calculator;

service AddService {
  // Unary API
  rpc Add (AddRequest) returns (AddResponse) {};
}


message AddRequest {
  int32 first_number = 1;
  int32 second_number = 2;
}
message AddResponse {
  int32 result = 1;
}